[package]
edition = "2021"
version = "0.1.0"
name = "sentinel-lib"
authors = [ "Greg Kapka <gregkapka@gmail.com>" ]
description = "shared fxnality for pTokens sentinels"

[lib]
doctest = false

[features]
non-validating = ["common_eth/non-validating"] # NOTE: Disables block & recepit validation
test-eth-rpc = [] # NOTE: Means the RPC fxns can only be tested if this feature is enabled

[dependencies]
rs_merkle = "1.4.1"

jni = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
warp = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
headers = { workspace = true }
rustc-hex = { workspace = true }
thiserror = { workspace = true }
jsonrpsee = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tiny-keccak = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
strum_macros = { workspace = true }
serde_derive = { workspace = true }
flexi_logger = { workspace = true }
futures-retry = { workspace = true }
derive-getters = { workspace = true }
ethereum-types = { workspace = true }
tokio-tungstenite = { workspace = true }
bounded-vec-deque = { workspace = true }

common = { workspace = true }
common_eth = { workspace = true }
common_metadata = { workspace = true }
common_chain_ids = { workspace = true }
common_eth_debug = { workspace = true }
common_file_logger = { workspace = true }
common_enclave_info = { workspace = true }
common_debug_signers = { workspace = true }

# NOTE: Rev is my PR to get a long commit hash. If merged we can update this import.
rbtag = { git = "https://github.com/LivingInSyn/rbtag.git", rev = "feee7c0" }

[dev-dependencies]
simple_logger = { workspace = true }
