[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.0.2"
readme = "README.md"
name = "erc20_on_evm"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
# NOTE: Turns off fee-taking capabilities.
disable-fees = ["common_fees/disable-fees"]
# NOTE: Turns off block header & chain validation.
non-validating = ["common/non-validating", "common_chain_ids/non-validating"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
paste = "1.0.6"
serde_json = "1.0.68"
function_name = "0.3.0"
derive_more = "0.99.17"
ethereum-types = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

common = { path = "../../common/common" }
common_database_utils = { package = "database_utils", path = "../../common/database_utils" }
common_fees = { package = "fees", path = "../../common/fees" }
common_eth = { package = "ethereum", path = "../../common/ethereum" }
common_metadata = { package = "metadata", path = "../../common/metadata" }
common_chain_ids = { package = "chain_ids", path = "../../common/chain_ids" }
common_enclave_info = { package = "enclave_info", path = "../../common/enclave_info" }
common_eth_debug = { package = "ethereum_debug", path = "../../common/ethereum_debug" }
common_debug_signers = { package = "debug_signers", path = "../../common/debug_signers" }
common_safe_addresses = { package = "safe_addresses", path = "../../common/safe_addresses" }

[lib]
doctest = false
