[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.2.0"
name = "btc_on_int"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
default = ["bitcoin"]
# NOTE: Turns off block header & chain validation.
non-validating = ["common_eth/non-validating","common_btc/non-validating"]
# NOTE: Turns this into an `ltc-on-int` core.
ltc = ["litecoin", "common_btc/ltc", "non-validating"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }
bitcoin = { workspace = true, optional = true }
litecoin = { workspace = true, optional = true }

common = { workspace = true }
common_btc = { workspace = true }
common_eth = { workspace = true }
common_metadata = { workspace = true }
common_chain_ids = { workspace = true }
common_eth_debug = { workspace = true }
common_enclave_info = { workspace = true }
common_debug_signers = { workspace = true }
common_safe_addresses = { workspace = true }
common_database_utils = { workspace = true }

[dev-dependencies]
simple_logger = { workspace = true }

[lib]
doctest = false
