[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.0.2"
name = "eos_on_int"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
# NOTE: Turns off block header & chain validation.
non-validating = ["common/non-validating"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
eos-chain = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }
common_eos = { workspace = true }
common_eth = { workspace = true }
common_metadata = { workspace = true }
common_eth_debug = { workspace = true }
common_chain_ids = { workspace = true }
common_enclave_info = { workspace = true }
common_debug_signers = { workspace = true }
common_database_utils = { workspace = true }
common_safe_addresses = { workspace = true }

[lib]
doctest = false
