[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.0.0"
name = "int_on_algo"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
paste = "1.0.6"
serde_json = "1.0.68"
function_name = "0.3.0"
derive_more = "0.99.17"
ethereum-types = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rust-algorand = { git = "https://github.com/provable-things/rust-algorand", rev = "79768a3" }

common = { path = "../../common/common" }
common_db = { package = "db", path = "../../common/db" }
common_eth = { package = "ethereum", path = "../../common/ethereum" }
common_algorand = { package = "algorand", path = "../../common/algorand" }
common_metadata = { package = "metadata", path = "../../common/metadata" }
common_chain_ids = { package = "chain_ids", path = "../../common/chain_ids" }
common_enclave_info = { package = "enclave_info", path = "../../common/enclave_info" }
common_eth_debug = { package = "ethereum_debug", path = "../../common/ethereum_debug" }
common_debug_signers = { package = "debug_signers", path = "../../common/debug_signers" }

[dev-dependencies]
serial_test = "0.6.0"

[features]
# NOTE: Turns off block header & chain validation.
non-validating = ["common/non-validating", "common_algorand/non-validating"]
