[package]
edition = "2021"
name = "sentinel"
version = "0.1.0"
authors = [ "Greg Kapka <gregkapka@gmail.com>" ]
description = "A pTokens Sentinel for EVM-to-EVM style bridges."

[lib]
name = "lib"
doctest = false
path = "src/lib/lib.rs"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
anyhow = "1.0.69"
futures = "0.3.26"
serde_json = "1.0.68"
futures-retry = "0.6.0"
ethereum-types = "0.12.1"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version =  "0.11.14", features = ["json"] }
jsonrpsee = { version = "0.16.2", features = [ "ws-client" ]}

simple_logger = "4.0.0" # TODO Move to dev-dependencies

common = { path = "../../common/common" }
common_eth = { package = "ethereum", path = "../../common/ethereum" }

[dev-dependencies]
dotenv = "0.15.0"
