[package]
edition = "2021"
name = "sentinel"
version = "0.1.0"
authors = [ "Greg Kapka <gregkapka@gmail.com>" ]
description = "A pTokens Sentinel for EVM-to-EVM style bridges."

[lib]
name = "lib"
doctest = false
path = "src/lib/lib.rs"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[features]
non-validating = ["common/non-validating"] # NOTE: Disables block & recepit validation

[dependencies]
log = "0.4.17"
warp = "0.3.3"
config = "0.13.3"
anyhow = "1.0.69"
serde = "1.0.152"
futures = "0.3.26"
lazy_static = "1.4.0"
serde_json = "1.0.68"
derive_more = "0.99.17"
futures-retry = "0.6.0"
serde_derive = "1.0.152"
ethereum-types = "0.12.1"
bounded-vec-deque = "0.1.1"
tokio = { version = "1.25.0", features = [ "full" ] }
clap = { version = "4.1.6", features = [ "derive" ] }
reqwest = { version =  "0.11.14", features = [ "json" ] }
jsonrpsee = { version = "0.16.2", features = [ "ws-client" ]}
mongodb = { version = "2.4.0", features = ["tokio-runtime"] }
flexi_logger = { version = "0.25.2", features = ["async", "compress"] }

common = { path = "../../common/common" }
common_eth = { package = "ethereum", path = "../../common/ethereum" }
common_metadata = { package = "metadata", path = "../../common/metadata" }
common_chain_ids = { package = "chain_ids", path = "../../common/chain_ids" }
common_enclave_info = { package = "enclave_info", path = "../../common/enclave_info" }
common_rocksdb = { package = "rocksdb_database", path = "../../common/rocksdb_database" }

[dev-dependencies]
dotenv = "0.15.0"
