[package]
edition = "2021"
name = "sentinel"
version = "0.1.0"
authors = [ "Greg Kapka <gregkapka@gmail.com>" ]
description = "A pTokens Sentinel for EVM-to-EVM style bridges."

[lib]
name = "lib"
doctest = false
path = "src/lib/lib.rs"

[[bin]]
name = "sentinel"
path = "src/bin/sentinel/main.rs"

[[bin]]
name = "sentinel-cli"
path = "src/bin/cli/main.rs"

[[bin]]
name = "sentinel-core"
path = "src/bin/core/main.rs"

[features]
non-validating = ["common_eth/non-validating"] # NOTE: Disables block & recepit validation
test-eth-rpc = [] # NOTE: Means the RPC fxns can only be tested if this feature is enabled

[dependencies]
hex = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
warp = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
jsonrpsee = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
ethers-core = { workspace = true }
strum_macros = { workspace = true }
serde_derive = { workspace = true }
flexi_logger = { workspace = true }
futures-retry = { workspace = true }
ethereum-types = { workspace = true }
tokio-tungstenite = { workspace = true }
bounded-vec-deque = { workspace = true }

common = { workspace = true }
common_eth = { workspace = true }
common_metadata = { workspace = true }
common_chain_ids = { workspace = true }
common_eth_debug = { workspace = true }
common_enclave_info = { workspace = true }
common_rocksdb_database = { workspace = true }

[dev-dependencies]
simple_logger = { workspace = true }
