[package]
edition = "2021"
version = "2.1.3"
name = "pbtc-on-eos"
rust-version = "1.56"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
file-logger = ["common_file_logger"]
default = ["rocks-db", "file-logger"]
rocks-db = ["common_rocksdb_database"]
json-rpc-db = ["common_jsonrpc_database"]
std-err-logger = ["common_stderr_logger"]
disable-fees = ["btc_on_eos/disable-fees"]
non-validating = ["btc_on_eos/non-validating", "common/non-validating"]

[dependencies]
log = { workspace = true }
serde = { workspace = true }
paste = { workspace = true }
docopt = { workspace = true }
anyhow = { workspace = true }
btc_on_eos = { path = "../../btc_on_eos" }

common = { workspace = true }
common_docopt_macros = { workspace = true }
common_file_logger = { workspace = true, optional = true }
common_stderr_logger = { workspace = true, optional = true }
common_rocksdb_database = { workspace = true, optional = true }
common_jsonrpc_database = { workspace = true, optional = true }
