[package]
name = "pbtc-on-eth"
version = "2.1.1"
authors = ["gregkapka <greg@oraclize.it>"]
edition = "2021"
rust-version = "1.56"

[features]
file-logger = ["common_file_logger"]
default = ["rocks-db", "file-logger"]
rocks-db = ["common_rocksdb_database"]
json-rpc-db = ["common_jsonrpc_database"]
std-err-logger = ["common_stderr_logger"]
disable-fees = ["btc_on_eth/disable-fees"]
non-validating = ["btc_on_eth/non-validating", "common/non-validating"]

[dependencies]
log = "0.4.14"
paste = "1.0.7"
docopt = "1.1.1"
anyhow = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }

btc_on_eth = { path = "../../btc_on_eth" }
common = { path = "../../../common/common" }
common_docopt_macros = { package = "docopt_macros", path = "../../../common/docopt_macros" }
common_file_logger = { package = "file_logger", path = "../../../common/file_logger", optional = true }
common_stderr_logger = { package = "stderr_logger", path = "../../../common/stderr_logger", optional = true }
common_rocksdb_database = { package = "rocksdb_database", path = "../../../common/rocksdb_database", optional = true }
common_jsonrpc_database = { package = "jsonrpc_database", path = "../../../common/jsonrpc_database", optional = true }
