[package]
edition = "2021"
version = "2.1.1"
name = "pbtc-on-eth"
rust-version = "1.56"
authors = ["gregkapka <gregkapka@gmail.com>"]

[features]
file-logger = ["common_file_logger"]
default = ["rocks-db", "file-logger"]
rocks-db = ["common_rocksdb_database"]
json-rpc-db = ["common_jsonrpc_database"]
std-err-logger = ["common_stderr_logger"]
disable-fees = ["btc_on_eth/disable-fees"]
non-validating = ["btc_on_eth/non-validating", "common/non-validating"]

[dependencies]
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
docopt = { workspace = true }
anyhow = { workspace = true }

btc_on_eth = { path = "../../btc_on_eth" }

common = { workspace = true }
common_docopt_macros = { workspace = true }
common_file_logger = { workspace = true, optional = true }
common_stderr_logger = { workspace = true, optional = true }
common_rocksdb_database = { workspace = true, optional = true }
common_jsonrpc_database = { workspace = true, optional = true }
